# evoguard

./: .gitignore  EvoGuard_Notebook.ipynb  README.md  pyproject.toml
docs/: benchmark_expansion.md  benchmark_spec.md  evoguard_search.md  starter_patch.md
environments/: deployment_profiles.yaml
examples/: benchmark.expanded.yaml  benchmark.healthcare.yaml  benchmark.regulated.eval.yaml  benchmark.regulated.search.yaml  benchmark.regulated.yaml  benchmark.starter.yaml  model_simulation_suite.yaml  profile.healthcare.yaml  search.adversarial.yaml  search.edge_regulated.yaml  search.finance.yaml  search.finance_regulated.yaml  search.healthcare.yaml  search.healthcare_regulated.yaml
models_catalog/: model_catalog.yaml
results/: complementarity_adversarial.csv  complementarity_adversarial.json  complementarity_finance_consumer.csv  complementarity_finance_consumer.json  complementarity_finance_regulated_stackaware.json  complementarity_healthcare_strict.csv  complementarity_healthcare_strict.json  graph_only.json  graph_rules_judge.json  isolation_adversarial.csv  isolation_adversarial.json  isolation_finance_consumer.csv  isolation_finance_consumer.json  isolation_healthcare_strict.csv  isolation_healthcare_strict.json  judge_only.json  rules_only.json  self_critique.json  unguarded.json
risk_ontology/: canonical_taxonomy.yaml  cognitive_roles.yaml  control_coverage_matrix.yaml  expanded_control_catalog.yaml  guardrail_layers.yaml  vulnerability_classes.yaml
scripts/: build_cards.py  check_model_factory.py  check_regulated_filters.py  evaluate_search_on_eval_split.py  export_evoguard_vs_baselines.py  export_model_stack_simulation_table.py  run_search.py  (+34 more)
(+101 files in other folders)
